--- a/Suggestunes/package.json
+++ b/Suggestunes/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.1.0",
     "account-info": "^1.0.1-alpha.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.19.1",
     "ngx-image-cropper": "^6.3.2",
     "routing": "^0.0.2",
     "rxjs": "~7.8.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "~15.2.1",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.15.11",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
