--- a/Suggestunes/package.json
+++ b/Suggestunes/package.json
@@ -27,6 +27,7 @@
     "ngx-image-cropper": "^6.3.2",
     "routing": "^0.0.2",
     "rxjs": "~7.8.0",
+    "spotify-web-api-node": "^5.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
