--- a/Suggestunes/package.json
+++ b/Suggestunes/package.json
@@ -25,6 +25,8 @@
     "algoliasearch": "^4.17.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.19.1",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
     "ngx-image-cropper": "^6.3.2",
     "routing": "^0.0.2",
     "rxjs": "~7.8.0",
