--- a/Suggestunes/package.json
+++ b/Suggestunes/package.json
@@ -24,6 +24,8 @@
     "account-info": "^1.0.1-alpha.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.19.1",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
     "ngx-image-cropper": "^6.3.2",
     "routing": "^0.0.2",
     "rxjs": "~7.8.0",
